TTWWW-471: removed class based selectors and replaced with data attributes

--- a/spectrum/autism_prevalence_map/templates/autism_prevalence_map/action_buttons.html
+++ b/spectrum/autism_prevalence_map/templates/autism_prevalence_map/action_buttons.html
@@ -13,7 +13,7 @@
                 <div class='flex'>
                     <div class='relative'>
                         <label class='absolute top-1.75 left-3 text-xs text-med-navy uppercase' for='prevalence-min'>Min</label>
-                        <input type='text' inputmode='numeric' pattern='^[0-9]+$' title='Please enter whole numbers only' id='prevalence-min' class='w-10.5 pt-5.2 pb-1.25 bg-light-navy-2 rounded-sm-l text-2xs text-center text-med-navy preva-input'>
+                        <input type='text' inputmode='numeric' pattern='^[0-9]+$' title='Please enter whole numbers only' id='prevalence-min' class='w-10.5 pt-5.2 pb-1.25 bg-light-navy-2 rounded-sm-l text-2xs text-center text-med-navy' data-group='prevalence'>
                     </div>
                     <div class='relative w-63.5 pt-4.5 pb-4.5 pl-4 pr-4 border-l-0.5 border-r-0.5 border-med-navy'>
                         <div id='prevalence-slider'></div>
@@ -22,7 +22,7 @@
                     </div>
                     <div class='relative'>
                         <label class='absolute top-1.75 left-2.75 text-xs text-med-navy uppercase' for='prevalence-max'>Max</label>
-                        <input type='text' inputmode='numeric' pattern='^[0-9]+$' title='Please enter whole numbers only' id='prevalence-max' class='w-10.5 pt-5.2 pb-1.25 bg-light-navy-2 rounded-sm-r text-2xs text-center text-med-navy preva-input'>
+                        <input type='text' inputmode='numeric' pattern='^[0-9]+$' title='Please enter whole numbers only' id='prevalence-max' class='w-10.5 pt-5.2 pb-1.25 bg-light-navy-2 rounded-sm-r text-2xs text-center text-med-navy' data-group='prevalence'>
                     </div>
                 </div>
             </div>
