--- a/spectrum/autism_prevalence_map/templates/autism_prevalence_map/about.html
+++ b/spectrum/autism_prevalence_map/templates/autism_prevalence_map/about.html
@@ -17,15 +17,15 @@
         </div>
     </section>
     <section class="max-w-400 mx-auto px-4 py-4 md:py-8">
-        <article class="mx-auto border-l-red flex flex-col bg-light-gray px-6 py-8 border-l-4 md:max-w-159 md:p-12 md:mt-8 md:border-l-6">
-            <h2 class="font-serif font-bold normal-case text-3sm leading-5.5 text-red md:tracking-normal-lg md:leading-7.1 md:text-2md">Table of contents</h2>
+        <article class="mx-auto border-l-red flex flex-col bg-light-gray px-6 py-8 border-l-4 md:max-w-159 md:px-14 md:py-12 md:mt-8 md:mb-20 md:border-l-6">
+            <h2 class="font-serif font-bold normal-case text-3sm leading-5.5 text-red md:tracking-normal-lg md:mb-8 md:leading-7.1 md:text-1.5md">Table of contents</h2>
             <div
                 class="font-serif-text font-thin text-1sm leading-6.4 tracking-wide text-dark-gray2 md:leading-8 md:tracking-wide md:text-3sm">
-                <a class="block mb-2 font-serif font-medium" href="#about-map">About the map</a>
-                <a class="block mb-2 font-serif font-medium" href="#how-to-use-map">How to use the map</a>
-                <a class="block mb-2 font-serif font-medium" href="#how-to-cite-map">How to cite the map</a>
-                <a class="block mb-2 font-serif font-medium" href="#more-info">More information</a>
-                <a class="block mb-2 font-serif font-medium" href="#team">The team</a>
+                <a class="block font-serif font-medium" href="#about-map">About the map</a>
+                <a class="block font-serif font-medium" href="#how-to-use-map">How to use the map</a>
+                <a class="block font-serif font-medium" href="#how-to-cite-map">How to cite the map</a>
+                <a class="block font-serif font-medium" href="#more-info">More information</a>
+                <a class="block font-serif font-medium" href="#team">The team</a>
             </div>
         </article>
         <article class="mx-auto mt-3 md:max-w-159">
