--- a/spectrum/autism_prevalence_map/templates/autism_prevalence_map/footer.html
+++ b/spectrum/autism_prevalence_map/templates/autism_prevalence_map/footer.html
@@ -2,12 +2,12 @@
 
 <footer class="bg-navy text-white">
     <section
-        class="max-w-400 mx-auto grid grid-cols-4 gap-4 px-4 py-4 lg:grid-cols-12 lg:gap-8 lg:py-8 lg:px-22 2xl:px-17.5">
-        <div class="mt-6 col-span-4 flex flex-col justify-between lg:col-span-12 lg:mt-12 lg:flex-row">
+        class="max-w-400 mx-auto grid grid-cols-4 gap-4 px-4 py-4 md:grid-cols-12 md:gap-8 md:py-8 md:px-22 2xl:px-17.5">
+        <div class="mt-6 col-span-4 flex flex-col justify-between md:col-span-12 md:mt-12 md:flex-row">
             <div
-                class="flex flex-col font-sans font-bold text-2xs text-white items-center uppercase lg:w-73 lg:items-start">
+                class="flex flex-col font-sans font-bold text-2xs text-white items-center uppercase md:w-73 md:items-start">
                 <div class="menu-footer-left-container">
-                    <ul class="grid gap-4 mb-4 tracking-extra-wide text-center lg:text-start">
+                    <ul class="grid gap-4 mb-4 tracking-extra-wide text-center md:text-start">
                         <li>
                             <a href="https://www.thetransmitter.org/./news/">News</a>
                         </li>
@@ -37,31 +37,26 @@
                         </li>
                     </ul>
                 </div> <a href="https://www.thetransmitter.org/spectrum/"
-                    class="flex text-light-navy-2 w-25 gap-2 items-center hover:text-light-red lg:w-unset">
-                    <svg xmlns="http://www.w3.org/2000/svg" class="w-5 h-5 lg:h-3.5 lg:w-3.5" width="13" height="14"
-                        fill="none">
-                        <path stroke="currentColor"
-                            d="m1 1 3.238 6M1 1h8.095l3.238 6M1 1v6.26L4.238 13m0-6h8.095M4.238 7v6m8.095-6-8.095 6">
-                        </path>
-                    </svg> Spectrum
+                    class="flex text-light-navy-2 w-25 gap-2 items-center hover:text-light-red md:w-unset">
+                    {% svg 'spectrum' %} Spectrum
                 </a>
-                <div class="h-px w-full bg-white my-10 lg:hidden"></div>
+                <div class="h-px w-full bg-white my-10 md:hidden"></div>
             </div>
             <div
-                class="font-serif font-light text-2xs text-white text-center flex flex-col gap-6 order-first lg:order-none lg:w-73">
-                <p class="font-serif text-2md lg:text-3lg">
+                class="font-serif font-light text-2xs text-white text-center flex flex-col gap-6 order-first md:order-none md:w-73">
+                <p class="font-serif text-2md md:text-3lg">
                     Have you recently published new research in neuroscience? </p>
-                <span class="font-serif text-1sm lg:text-3sm">
+                <span class="font-serif text-1sm md:text-3sm">
                 </span>
-                <a class="font-sans text-2xs uppercase underline tracking-extra-wide hover:text-light-red lg:text-2sm lg:tracking-extra-wide"
+                <a class="font-sans text-2xs uppercase underline tracking-extra-wide hover:text-light-red md:text-2sm md:tracking-extra-wide"
                     href="https://www.thetransmitter.org/contact-us/">
                     Let us know </a>
-                <div class="h-px w-full bg-white mt-4 mb-10 lg:hidden"></div>
+                <div class="h-px w-full bg-white mt-4 mb-10 md:hidden"></div>
             </div>
             <div
-                class="flex flex-col font-sans gap-10 font-bold text-2xs text-white items-center uppercase lg:gap-12 lg:w-73 lg:items-end">
+                class="flex flex-col font-sans gap-10 font-bold text-2xs text-white items-center uppercase md:gap-12 md:w-73 md:items-end">
                 <div class="menu-footer-right-menu-container">
-                    <ul class="grid gap-4 tracking-extra-wide text-center lg:text-end">
+                    <ul class="grid gap-4 tracking-extra-wide text-center md:text-end">
                         <li>
                             <a href="https://www.thetransmitter.org/about/">About <em>The Transmitter</em></a>
                         </li>
@@ -111,9 +106,9 @@
                         </li>
                     </ul>
                 </div>
-                <div class="h-px w-full bg-white lg:hidden"></div>
-                <div class="flex flex-col gap-4 text-light-navy-2 font-light lg:items-end">
-                    <div class="text-1xs2 lg:text-2xs">Follow The transmitter:</div>
+                <div class="h-px w-full bg-white md:hidden"></div>
+                <div class="flex flex-col gap-4 text-light-navy-2 font-light md:items-end">
+                    <div class="text-1xs2 md:text-2xs">Follow The transmitter:</div>
                     <div class="flex gap-2">
                         <a class="group flex items-center justify-center border border-light-navy rounded w-10 h-10 cursor-pointer hover:bg-light-navy-2"
                             href="https://www.facebook.com/thetransmitternews" target="_blank" data-id="">
@@ -152,17 +147,17 @@
                         </a>
                     </div>
                 </div>
-                <div class="h-px w-full bg-white my-10 block lg:hidden"></div>
+                <div class="h-px w-full bg-white my-10 block md:hidden"></div>
             </div>
         </div>
-        <div class="col-span-12 h-px w-full bg-white my-10 hidden lg:block"></div>
-        <div class="col-span-4 font-light font-sans text-sm tracking-wide-xl lg:col-span-6 lg:col-start-4">
+        <div class="col-span-12 h-px w-full bg-white my-10 hidden md:block"></div>
+        <div class="col-span-4 font-light font-sans text-sm tracking-wide-xl md:col-span-6 md:col-start-4">
             <div class="grid justify-items-center text-center gap-4">
                 <a href="/">
                     {% svg 'transmitter-logo-white' %}
                     <span class="sr-only">Home</span>
                 </a>
-                <p class="font-serif text-1md tracking-tight-sm lg:text-lg lg:tracking-normal">Curating neuroscience,
+                <p class="font-serif text-1md tracking-tight-sm md:text-lg md:tracking-normal">Curating neuroscience,
                     connecting community</p>
                 <p>An editorially independent publication supported by the Simons Foundation</p>
             </div>
