TTWWW-480: Fixes and updates for UI

--- a/spectrum/autism_prevalence_map/templates/autism_prevalence_map/about.html
+++ b/spectrum/autism_prevalence_map/templates/autism_prevalence_map/about.html
@@ -99,37 +99,37 @@
             </p>
             <h2 id="more-info" class="mb-4 mt-8 font-sans font-medium text-1md uppercase text-red md:mt-14 md:text-lg">More information:</h2>
             <p>Here is a selection of <i>Spectrum</i> articles on autism prevalence.</p>
-            <p>
+            <p class="mb-2.5">
                 <a class="font-normal" href="https://www.thetransmitter.org/spectrum/study-quantifies-prevalence-autism-india/">Study quantifies prevalence of autism in India </a>
             </p>
-            <p>
+            <p class="mb-5.5">
                 <a class="font-normal" href="https://www.thetransmitter.org/spectrum/new-report-shows-slight-uptick-autism-prevalence/">New report shows slight uptick in autism prevalence</a>
             </p>
-            <p>
+            <p class="mb-5.5">
                 <a class="font-normal" href="https://www.thetransmitter.org/spectrum/prevalence-autism-u-s-remains-steady-new-data-suggest/">Prevalence of autism in U.S. remains steady, new data suggest</a>
             </p>
-            <p>
+            <p class="mb-5.5">
                 <a class="font-normal" href="https://www.thetransmitter.org/spectrum/school-survey-india-reveals-low-autism-prevalence/">School survey in India reveals low autism prevalence</a>
             </p>
-            <p>
+            <p class="mb-5.5">
                 <a class="font-normal" href="https://www.thetransmitter.org/spectrum/u-s-stats-show-autism-rate-reaching-possible-plateau/">U.S. stats show autism rate reaching possible plateau</a>
             </p>
-            <p>
+            <p class="mb-5.5">
                 <a class="font-normal" href="https://www.thetransmitter.org/spectrum/new-spike-in-autism-numbers-may-reflect-rise-in-awareness/">New spike in autism numbers may reflect rise in awareness</a>
             </p>
-            <p>
+            <p class="mb-5.5">
                 <a class="font-normal" href="https://www.thetransmitter.org/spectrum/prevalence-perturbed/">Prevalence perturbed</a>
             </p>
-            <p>
+            <p class="mb-5.5">
                 <a class="font-normal" href="https://www.thetransmitter.org/spectrum/clinical-research-israeli-study-shows-high-autism-prevalence/">Clinical research: Israeli study shows high autism prevalence</a>
             </p>
-            <p>
+            <p class="mb-5.5">
                 <a class="font-normal" href="https://www.thetransmitter.org/spectrum/rising-rates/">Rising rates</a>
             </p>
-            <p>
+            <p class="mb-5.5">
                 <a class="font-normal" href="https://www.thetransmitter.org/spectrum/study-finds-high-rate-of-autism-in-south-korea/">Study finds high rate of autism in South Korea</a>
             </p>
-            <h2 id="team" class="mb-4 mt-6 font-sans font-medium text-1md uppercase text-red md:mt-12 md:text-lg">The team:</h2>
+            <h2 id="team" class="mb-4 mt-6 font-sans font-medium text-1md uppercase text-red md:mt-12 md:mb-7.5 md:text-lg">The team:</h2>
             <div>
                 <h4 class="mb-2 font-serif text-dark-gray2 text-3sm md:text-1.5md">Ivan Oransky</h4>
                 <h5 class="mb-5 italic font-sans font-normal text-dark-gray2 text-1xs2 tracking-normal-md md:text-3xs">
