ttwww-480: updated seo meta data

--- a/spectrum/autism_prevalence_map/templates/autism_prevalence_map/base.html
+++ b/spectrum/autism_prevalence_map/templates/autism_prevalence_map/base.html
@@ -3,19 +3,18 @@
 <!DOCTYPE html>
 <html lang='en'>
 <head>
-
     <meta charset='utf-8'>
-    <title>{% block title %}{% endblock %}</title>
-    <meta name='description' content=''>
+    <title>{% block title %}Global Autism Prevalence Map | The Transmitter{% endblock %}</title>
+    <meta name='description' content='The map features a collection of studies on autism prevalence around the world. It highlights places where information is available — and places where information is missing.'>
     <meta name='author' content=''>
     <meta name='twitter:card' content='summary_large_image'>
     <meta name='twitter:title' content='Global Autism Prevalence Map | The Transmitter'>
     <meta name='twitter:description' content='The map features a collection of studies on autism prevalence around the world. It highlights places where information is available — and places where information is missing.'>
-    <meta name='twitter:image' content='https://autismprevalence.thetransmitter.org/static/autism_prevalence_map/img/PrevalenceMapSG.png'>
+    <meta name='twitter:image' content='https://autismprevalence.thetransmitter.org/static/autism_prevalence_map/img/global-ausitm-prevalence-map-social.png'>
     <meta property='og:title' content='Global Autism Prevalence Map | The Transmitter' />
     <meta property='og:type' content='website' />
     <meta property='og:url' content='https://autismprevalence.thetransmitter.org/' />
-    <meta property='og:image' content='https://autismprevalence.thetransmitter.org/static/autism_prevalence_map/img/PrevalenceMapSG.png' />
+    <meta property='og:image' content='https://autismprevalence.thetransmitter.org/static/autism_prevalence_map/img/global-ausitm-prevalence-map-social.png' />
     <meta property='og:description' content='The map features a collection of studies on autism prevalence around the world. It highlights places where information is available — and places where information is missing.' />
 
     <meta name='viewport' content='width=device-width, initial-scale=1, shrink-to-fit=no'>
