TTWWW-477: added hover color for the cite button

--- a/spectrum/autism_prevalence_map/templates/autism_prevalence_map/action_buttons.html
+++ b/spectrum/autism_prevalence_map/templates/autism_prevalence_map/action_buttons.html
@@ -78,7 +78,7 @@
 
         <a role='button' id='download-link' class='inline-block w-button pt-2.5 pb-2.5 bg-med-navy rounded-sm text-sm font-bold text-white uppercase text-center' href='#'>Download Data</a>
 
-        <button type='button' id='copy-link' class='mt-4 text-2xs text-navy font-bold uppercase text-left'>
+        <button type='button' id='copy-link' class='mt-4 text-2xs text-navy hover:text-red font-bold uppercase text-left'>
             <img src="{% static 'autism_prevalence_map/img/icon-link.svg' %}" alt='link icon' class='inline-block pr-1.5 translate-y-neg1'>Cite The Map (<span id='citation-count'>0</span>)
             <span id='citation-url' class='block pt-0.75 text-xs text-med-navy'>https://DOI.org/n234.03/994de4</span>
         </button>
