--- a/spectrum/autism_prevalence_map/templates/autism_prevalence_map/about.html
+++ b/spectrum/autism_prevalence_map/templates/autism_prevalence_map/about.html
@@ -29,13 +29,13 @@
             </div>
         </article>
         <article class="mx-auto mt-3 md:max-w-159">
-            <h2 id="about-map" class="mb-4 mt-6 font-sans font-medium text-1md text-red md:mt-12 md:text-lg">About the Global Autism Prevalence Map:</h2>
+            <h2 id="about-map" class="mb-4 mt-6 font-sans font-medium uppercase text-1md text-red md:mt-12 md:text-lg">About the Global Autism Prevalence Map:</h2>
             <p>This map was created by the team at <a href="https://www.thetransmitter.org/"><i>The Transmitter</i></a>, an essential resource for the neuroscience community, dedicated to helping scientists at all career stages stay current and build connections. <a href="https://www.thetransmitter.org/spectrum/"><i>Spectrum</i></a> is a key part of <i>The Transmitter</i> and publishes news and perspectives about autism research. Subscribe to our <a href="https://www.thetransmitter.org/newsletters-alerts/"><i>Spectrum</i> newsletter</a> to stay up to date.</p>
             <p>The map features a collection of studies on autism prevalence around the world. It highlights places where information is available—and places where information is missing. We periodically update the map with new studies as they become available</p>
-            <h2 id="how-to-use-map" class="mb-4 mt-6 font-sans font-medium text-1md text-red md:mt-12 md:text-lg">How to use the Global Autism Prevalence Map:</h2>
+            <h2 id="how-to-use-map" class="mb-4 mt-6 font-sans font-medium uppercase text-1md text-red md:mt-12 md:text-lg">How to use the Global Autism Prevalence Map:</h2>
             <p>Each dot on the map represents a study. To see more information about a particular study, click on the corresponding dot. The window that pops up has key pieces of available information from that study.</p>
             <p>You can also view and filter the studies in the “list” view. In either the map or the list view, you can use the filters at the top to display studies that match certain criteria, such as sample size, prevalence estimate or study type. And you can use the timeline at the bottom of the page to filter by the years in which studies were conducted or published.</p>
-            <h2 id="key-to-terms" class="mb-4 mt-6 font-sans font-medium text-1md text-red md:mt-12 md:text-lg">Key to terms used on the Global Autism Prevalence Map:</h2>
+            <h2 id="key-to-terms" class="mb-4 mt-6 font-sans font-medium uppercase text-1md text-red md:mt-12 md:text-lg">Key to terms used on the Global Autism Prevalence Map:</h2>
             <p><b>Prevalence</b> is shown on the map as the estimated number of autistic people per 10,000 people in the population studied.</p>
             <p>When available, the study shows the proportion of participants with at least an  <b>average IQ</b> — the definition of “average” IQ varies from study to study but typically refers to a score above 70 or 80.</p>
             <p class="mt-6 md:mt-8"><b>Diagnostic criteria</b> include the following options:</p>
@@ -82,11 +82,11 @@
             <p>AD — autistic disorder (now classified as autism spectrum disorder, or ASD, in the DSM-5)</p>
             <p>PDD — pervasive developmental disorder (now classified as ASD in the DSM-5)</p>
             <p>ASD — autism spectrum disorder</p>
-            <h2 id="how-to-cite-map" class="mb-4 mt-6 font-sans font-medium text-1md text-red md:mt-12 md:text-lg">How to cite the Global Autism Prevalence Map:</h2>
+            <h2 id="how-to-cite-map" class="mb-4 mt-6 font-sans font-medium uppercase text-1md text-red md:mt-12 md:text-lg">How to cite the Global Autism Prevalence Map:</h2>
             <p>
                 Please include a statement in your article or on your website that indicates that you retrieved the information from <a href="https://autismprevalence.thetransmitter.org/">https://autismprevalence.thetransmitter.org/</a>. If you refer to it by name, please call it the “Global Autism Prevalence Map from The Transmitter” and link to this page. You can review our editorial policies <a href="https://www.thetransmitter.org/editorial-policies/">here</a>.
             </p>
-            <h2 id="more-info" class="mb-4 mt-8 font-sans font-medium text-1md text-red md:mt-14 md:text-lg">Read stories on autism prevalence published by <i>The Transmitter:</i></h2>
+            <h2 id="more-info" class="mb-4 mt-8 font-sans font-medium uppercase text-1md text-red md:mt-14 md:text-lg">Read stories on autism prevalence published by <i>The Transmitter:</i></h2>
             <p class="mb-2.5">
                 <a class="font-normal" href="https://www.thetransmitter.org/spectrum/u-s-autism-prevalence-continues-to-rise-as-race-and-sex-gaps-shrink-new-stats-show/">U.S. autism prevalence continues to rise as race and sex gaps shrink, new stats show</a>
             </p>
