--- a/spectrum/autism_prevalence_map/templates/autism_prevalence_map/action_buttons.html
+++ b/spectrum/autism_prevalence_map/templates/autism_prevalence_map/action_buttons.html
@@ -1,3 +1,5 @@
+{% load svg %}
+
 <div class='flex justify-between mb-4'>
     <div id='filter-list' class='max-w-207.5'>
         <form class='flex flex-wrap gap-2'>
@@ -70,8 +72,16 @@
             <button type='button' id='clear-filters' class='inline-block pt-2.5 pb-2.5 pl-5.5 pr-5.5 bg-med-navy rounded-sm text-sm font-bold text-white uppercase'>Clear</button>
         </form>
     </div>
-
-    <div>
-        <a role='button' id='download-link' class='inline-block pt-2.5 pb-2.5 pl-6.5 pr-6.5 bg-med-navy rounded-sm text-sm font-bold text-white uppercase' href='#'>Download Data</a>
+    <div class="flex items-start gap-4 relative">
+        <button role='button' data-mean='0.23' class='inline-block pt-2.5 pb-2.5 pl-6.5 pr-6.5 bg-light-gray border-0.5 border-navy rounded-sm text-sm font-bold text-med-navy uppercase hover:text-light-red2'aria-haspopup="true" aria-controls="mean-popup">Calculate mean</button>
+        <a role='button' id='download-link' class='inline-block pt-2.5 pb-2.5 pl-6.5 pr-6.5 bg-med-navy rounded-sm text-sm font-bold text-white uppercase no-underline' href='#'>Download Data</a>
+        <div id="mean-popup" 
+            class="absolute top-12 right-52 hidden bg-light-gray shadow-mean-popup rounded-md p-4 border-0.5 border-light-gray2 w-mean-popup font-serif text-2xs2 text-dark-gray2" 
+            role="dialog" 
+            aria-hidden="true"
+            tabindex="-1">
+            <span class="flex items-center gap-2">{% svg 'icon-copy' %} <span data-id="mean-popup-text" class="uppercase"></span></span>
+            <span class="block mt-2 text-2xs tracking-normal-md">Note: This button calculates the mean prevalence of all studies currently included within the filter range but does not account for a weighted average of the effect estimates from the different studies.</span>
+        </div>
     </div>
 </div>
