--- a/spectrum/autism_prevalence_map/templates/autism_prevalence_map/action_buttons.html
+++ b/spectrum/autism_prevalence_map/templates/autism_prevalence_map/action_buttons.html
@@ -11,7 +11,6 @@
             </div>
             <div class='relative border border-med-navy rounded-sm bg-light-gray'>
                 <label class='absolute top-0.5 left-14.5 text-xs text-med-navy uppercase' for='prevalence-slider'>Prevalence (per 10,000)</label>
-
                 <div class='flex'>
                     <div class='relative'>
                         <label class='absolute top-1.75 left-3 text-xs text-med-navy uppercase' for='prevalence-min'>Min</label>
@@ -55,7 +54,6 @@
                     <option value='all'>All</option>
                 </select>
             </div>
-            
             <div class='relative border border-med-navy rounded-sm bg-light-gray'>
                 <label class='absolute top-1.75 left-3.75 text-xs text-med-navy uppercase' for='min_year' id='earliest-label'>Earliest Year Published</label>
                 <select class='appearance-none pt-5.2 pr-8.5 pb-1.25 pl-3.75 w-filter rounded-sm bg-inherit text-2xs uppercase text-med-navy bg-select-arrow bg-no-repeat bg-right-4 bg-arrow-sm' id='min_year'>
@@ -68,18 +66,13 @@
                     <option value=''>All</option>
                 </select>
             </div>
-
             <button type='button' id='clear-filters' class='inline-block pt-2.5 pb-2.5 pl-5.5 pr-5.5 bg-med-navy rounded-sm text-sm font-bold text-white uppercase'>Clear</button>
         </form>
     </div>
     <div class="flex items-start gap-4 relative">
         <button role='button' data-mean='0.23' class='inline-block pt-2.5 pb-2.5 pl-6.5 pr-6.5 bg-light-gray border-0.5 border-navy rounded-sm text-sm font-bold text-med-navy uppercase hover:text-light-red2'aria-haspopup="true" aria-controls="mean-popup">Calculate mean</button>
         <a role='button' id='download-link' class='inline-block pt-2.5 pb-2.5 pl-6.5 pr-6.5 bg-med-navy rounded-sm text-sm font-bold text-white uppercase no-underline' href='#'>Download Data</a>
-        <div id="mean-popup" 
-            class="absolute top-12 right-52 hidden bg-light-gray shadow-mean-popup rounded-md p-4 border-0.5 border-light-gray2 w-mean-popup font-serif text-2xs2 text-dark-gray2" 
-            role="dialog" 
-            aria-hidden="true"
-            tabindex="-1">
+        <div id="mean-popup" class="absolute top-12 right-52 hidden bg-light-gray shadow-mean-popup rounded-md p-4 border-0.5 border-light-gray2 w-mean-popup font-serif text-2xs2 text-dark-gray2" role="dialog" aria-hidden="true">
             <span class="flex items-center gap-2">{% svg 'icon-copy' %} <span data-id="mean-popup-text" class="uppercase"></span></span>
             <span class="block mt-2 text-2xs tracking-normal-md">Note: This button calculates the mean prevalence of all studies currently included within the filter range but does not account for a weighted average of the effect estimates from the different studies.</span>
         </div>
