TTWWW-479: completed front end edits to combine my work and Dmitrys

--- a/spectrum/autism_prevalence_map/templates/autism_prevalence_map/map.html
+++ b/spectrum/autism_prevalence_map/templates/autism_prevalence_map/map.html
@@ -9,7 +9,7 @@
 {% block body_block %}
 <!-- Main Container
 –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-<div class='mx-auto max-w-container'>
+<div class='relative mx-auto max-w-container'>
     {% include 'autism_prevalence_map/action_buttons.html' with template='map' %}
 
     <!-- Map div
