--- a/spectrum/autism_prevalence_map/templates/autism_prevalence_map/action_buttons.html
+++ b/spectrum/autism_prevalence_map/templates/autism_prevalence_map/action_buttons.html
@@ -74,7 +74,7 @@
         </form>
     </div>
 
-    <div class="flex items-start flex-wrap justify-end max-w-buttons">
+    <div class="absolute right-0 flex items-start flex-wrap justify-end w-buttons">
         <!--<a role='button' id='calculate-mean' class='inline-block w-button pt-2.4 pb-2.4 mr-4 box-border bg-light-gray border-0.5 border-navy rounded-sm text-sm font-bold text-med-navy uppercase text-center' href='#'>Calculate Mean</a>-->
         <button role='button' data-mean='0.23' class='inline-block w-button mr-4 pt-2.4 pb-2.4 bg-light-gray border-0.5 border-navy rounded-sm text-sm font-bold text-med-navy uppercase hover:text-light-red2' aria-haspopup='true' aria-controls='mean-popup'>Calculate mean</button>
 
@@ -82,10 +82,10 @@
 
         <button type='button' id='copy-link' class='mt-4 text-2xs text-navy hover:text-red font-bold uppercase text-left'>
             <img src="{% static 'autism_prevalence_map/img/icon-link.svg' %}" alt='link icon' class='inline-block pr-1.5 translate-y-neg1'>Cite The Map (<span id='citation-count'>0</span>)
-            <span id='citation-url' class='block pt-0.75 text-xs text-med-navy'>https://DOI.org/n234.03/994de4</span>
+            <span id='citation-url' class='block pt-0.75 text-xs text-med-navy'>https://doi.org/10.53053/NDWR8664</span>
         </button>
 
-        <div id='mean-popup' class='absolute top-12 right-52 hidden bg-light-gray shadow-mean-popup rounded-md p-4 border-0.5 border-light-gray2 w-mean-popup font-serif text-2xs2 text-dark-gray2' role='dialog' aria-hidden='true'>
+        <div id='mean-popup' class='absolute top-11.5 right-52 hidden bg-light-gray shadow-mean-popup rounded-md p-4 border-0.5 border-light-gray2 w-mean-popup font-serif text-2xs2 text-dark-gray2' role='dialog' aria-hidden='true'>
             <span class='flex items-center gap-2'>{% svg 'icon-copy' %} <span data-id='mean-popup-text' class='uppercase'></span></span>
             <span class='block mt-2 text-2xs tracking-normal-md'>Note: This button calculates the mean prevalence of all studies currently included within the filter range but does not account for a weighted average of the effect estimates from the different studies.</span>
         </div>
