TTWWW-479: completed the server side functionality to calculate the mean

--- a/spectrum/autism_prevalence_map/templates/autism_prevalence_map/action_buttons.html
+++ b/spectrum/autism_prevalence_map/templates/autism_prevalence_map/action_buttons.html
@@ -76,7 +76,7 @@
 
     <div class="absolute right-0 flex items-start flex-wrap justify-end w-buttons">
         <!--<a role='button' id='calculate-mean' class='inline-block w-button pt-2.4 pb-2.4 mr-4 box-border bg-light-gray border-0.5 border-navy rounded-sm text-sm font-bold text-med-navy uppercase text-center' href='#'>Calculate Mean</a>-->
-        <button role='button' data-mean='0.23' class='inline-block w-button mr-4 pt-2.4 pb-2.4 bg-light-gray border-0.5 border-navy rounded-sm text-sm font-bold text-med-navy uppercase hover:text-light-red2' aria-haspopup='true' aria-controls='mean-popup'>Calculate mean</button>
+        <button role='button' data-mean class='inline-block w-button mr-4 pt-2.4 pb-2.4 bg-light-gray border-0.5 border-navy rounded-sm text-sm font-bold text-med-navy uppercase hover:text-light-red2' aria-haspopup='true' aria-controls='mean-popup'>Calculate mean</button>
 
         <a role='button' id='download-link' class='inline-block w-button pt-2.4 pb-2.4 bg-med-navy border-0.5 border-navy rounded-sm text-sm font-bold text-white uppercase text-center' href=''>Download Data</a>
 
