TTWWW-480: Update ToC for about page

--- a/spectrum/autism_prevalence_map/templates/autism_prevalence_map/about.html
+++ b/spectrum/autism_prevalence_map/templates/autism_prevalence_map/about.html
@@ -19,13 +19,13 @@
             <h2 class="font-serif font-bold normal-case text-3sm leading-5.5 text-red md:tracking-normal-lg md:mb-8 md:leading-7.1 md:text-1.5md">Table of contents</h2>
             <div
                 class="font-serif-text font-thin text-1sm leading-6.4 tracking-wide text-dark-gray2 md:leading-8 md:tracking-wide md:text-3sm">
-                <a class="block font-serif font-medium" href="#about-map">About the map</a>
+                <a class="block font-serif font-medium" href="#about-map">About the Global Autism Prevalence Map</a>
                 <a class="block font-serif font-medium" href="#how-to-use-map">How to use the map</a>
-                <a class="block font-serif font-medium" href="#key-to-terms">Key to terms</a>
+                <a class="block font-serif font-medium" href="#key-to-terms">Key to terms used on the map</a>
                 <a class="block font-serif font-medium" href="#how-to-cite-map">How to cite the map</a>
-                <a class="block font-serif font-medium" href="#more-info">More information</a>
-                <a class="block font-serif font-medium" href="#team">The team</a>
-                <a class="block font-serif font-medium" href="#hear-from-you">We want to hear from you</a>
+                <a class="block font-serif font-medium" href="#more-info">Read <i>The Transmitter’s</i> autism prevalence coverage</a>
+                <a class="block font-serif font-medium" href="#team">The team behind the map</a>
+                <a class="block font-serif font-medium" href="#hear-from-you">Contact us</a>
             </div>
         </article>
         <article class="mx-auto mt-3 md:max-w-159">
