TTWWW-472: stashing changes

--- a/spectrum/autism_prevalence_map/templates/autism_prevalence_map/map.html
+++ b/spectrum/autism_prevalence_map/templates/autism_prevalence_map/map.html
@@ -15,9 +15,9 @@
     <!-- Map div
     –––––––––––––––––––––––––––––––––––––––––––––––––– -->
     <div class="flex">
-        <div id="info-card-container" class="relative h-map lg:h-map-lg xl:h-map-xl w-info bg-white border-0.5 border-light-gray3 rounded-md shadow-info">
-            <div id="info-card" class="relative max-h-info overflow-y-scroll">
-                <h1>Welcome to the Global Autism Prevalence Map</h1>
+        <div id="info-card-container" class="relative h-map lg:h-map-lg xl:h-map-xl w-info lg:mr-10.5 xl:mr-12 bg-white border-0.5 border-light-gray3 rounded-md shadow-info">
+            <div id="info-card" class="relative max-h-info overflow-y-scroll pl-4">
+                <h1 class="mt-30">Welcome to the Global Autism Prevalence Map</h1>
                 <p>Study data will appear on the side panel. Click any dot on the map to see more details.</p>
                 <a href="/about/" class="inline-block">Learn More</a>
             </div>
