--- a/spectrum/autism_prevalence_map/templates/autism_prevalence_map/map.html
+++ b/spectrum/autism_prevalence_map/templates/autism_prevalence_map/map.html
@@ -14,15 +14,15 @@
 
     <!-- Map div
     –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-    <div class="flex">
-        <div id="info-card-container" class="relative h-map lg:h-map-lg xl:h-map-xl w-info lg:mr-10.5 xl:mr-12 bg-white border-0.5 border-light-gray3 rounded-md shadow-info">
-            <div id="info-card" class="relative max-h-info overflow-y-scroll pl-4">
-                <h1 class="mt-30 mb-2.75 max-w-welcome font-serif text-2md leading-7.2 text-med-navy">Welcome to the Global Autism Prevalence Map</h1>
-                <p class="mb-9 max-w-welcome font-serif text-sm3 leading-4.5 text-dark-gray2">Study data will appear on the side panel. Click any dot on the map to see more details.</p>
-                <a href="/about/" class="inline-block w-learn pt-2.5 pb-2.5 bg-med-navy rounded-sm text-sm font-bold text-white uppercase text-center no-underline">Learn More</a>
+    <div class='flex'>
+        <div id='info-card-container' class='relative h-map lg:h-map-lg xl:h-card-xl w-info lg:mr-10.5 xl:mr-12 pt-4 bg-white border-0.5 border-light-gray3 rounded-md shadow-info'>
+            <div id='info-card' class='relative max-h-info overflow-y-scroll pl-4 pr-4'>
+                <h1 class='mt-22.75 xl:mt-45 mb-3.75 max-w-welcome font-serif text-2md font-bold leading-7.2 text-med-navy'>Welcome to the Global Autism Prevalence Map</h1>
+                <p class='mb-9 max-w-welcome font-serif text-sm3 leading-4.5 text-dark-gray2'>Data studies will be displayed in this side panel. Click any dot on the map to view detailed information.</p>
+                <a href='/about/' class='inline-block w-learn py-1.75 lg:py-2.5 bg-med-navy rounded-sm text-sm0 lg:text-sm font-bold text-light-navy-2 uppercase text-center no-underline'>Learn More</a>
             </div>
         </div>
-        <div id='map' class='h-map w-map lg:h-map-lg lg:w-map-lg xl:h-map-xl xl:w-map-xl'></div>
+        <div id='map' class='h-map w-map lg:h-map-lg lg:w-map-lg xl:h-map-xl xl:w-map-xl xl:mt-6.5'></div>
     </div>
     <!-- Timeline div
     –––––––––––––––––––––––––––––––––––––––––––––––––– -->
