--- a/spectrum/autism_prevalence_map/templates/autism_prevalence_map/action_buttons.html
+++ b/spectrum/autism_prevalence_map/templates/autism_prevalence_map/action_buttons.html
@@ -67,11 +67,11 @@
                 </select>
             </div>
 
-            <button type='button' id='clear-filters' class='inline-block pt-2.5 pb-2.5 pl-5.5 pr-5.5 bg-med-navy rounded-sm text-sm font-bold text-white uppercase'>Clear</button>
+            <button type='button' id='clear-filters' class='inline-block pt-2.5 pb-2.5 pl-5.5 pr-5.5 bg-med-navy rounded-sm text-sm font-bold text-light-navy-2 uppercase'>Clear</button>
         </form>
     </div>
 
     <div>
-        <a role='button' id='download-link' class='inline-block pt-2.5 pb-2.5 pl-6.5 pr-6.5 bg-med-navy rounded-sm text-sm font-bold text-white uppercase' href='#'>Download Data</a>
+        <a role='button' id='download-link' class='inline-block pt-2.5 pb-2.5 pl-6.5 pr-6.5 bg-med-navy rounded-sm text-sm font-bold text-light-navy-2 uppercase' href='#'>Download Data</a>
     </div>
 </div>
