TTWWW-480: Fixes according to ticket comments

--- a/spectrum/autism_prevalence_map/templates/autism_prevalence_map/about.html
+++ b/spectrum/autism_prevalence_map/templates/autism_prevalence_map/about.html
@@ -23,7 +23,7 @@
                 <a class="block font-serif font-medium" href="#how-to-use-map">How to use the map</a>
                 <a class="block font-serif font-medium" href="#key-to-terms">Key to terms used on the map</a>
                 <a class="block font-serif font-medium" href="#how-to-cite-map">How to cite the map</a>
-                <a class="block font-serif font-medium" href="#more-info">Read <i>The Transmitter’s</i> autism prevalence coverage</a>
+                <a class="block font-serif font-medium" href="#more-info">Read <i>The Transmitter</i>’s autism prevalence coverage</a>
                 <a class="block font-serif font-medium" href="#team">The team behind the map</a>
                 <a class="block font-serif font-medium" href="#hear-from-you">Contact us</a>
             </div>
@@ -37,77 +37,78 @@
             <p>You can also view and filter the studies in the “list” view. In either the map or the list view, you can use the filters at the top to display studies that match certain criteria, such as sample size, prevalence estimate or study type. And you can use the timeline at the bottom of the page to filter by the years in which studies were conducted or published.</p>
             <h2 id="key-to-terms" class="mb-4 mt-6 font-sans font-medium uppercase text-1md text-red md:mt-12 md:text-lg">Key to terms used on the Global Autism Prevalence Map:</h2>
             <p><b>Prevalence</b> is shown on the map as the estimated number of autistic people per 10,000 people in the population studied.</p>
-            <p>When available, the study shows the proportion of participants with at least an  <b>average IQ</b> — the definition of “average” IQ varies from study to study but typically refers to a score above 70 or 80.</p>
-            <p class="mt-6 md:mt-8"><b>Diagnostic criteria</b> include the following options:</p>
-            <p>ABC — Autism Behavior Checklist</p>
-            <p>ADOS — Autism Diagnostic Observation Schedule</p>
-            <p>ADI, ADI-R — Autism Diagnostic Interview, Autism Diagnostic Interview-Revised Autistic Disorder</p>
-            <p>CABS — Clancy Autism Behavior Scale</p>
-            <p>CARS — Childhood Autism Rating Scale</p>
-            <p>CCMD-2, CCMD-2-R — Chinese Classification of Mental Disorders, 2nd edition</p>
-            <p><b>Clinician diagnosis</b></p>
-            <p>DAWBA — Development and Well-Being Assessment</p>
-            <p>DISCO — Diagnostic Interview for Social and Communication Disorderss</p>
-            <p>DSM-III, DSM-III-R, DSM-IV, DSM-IV-TR, DSM-5 — editions of the Diagnostic and Statistical Manual of Mental Disorders</p>
-            <p><b>Gillberg criteria — Christopher Gillberg’s diagnostic description</b></p>
-            <p>ICD-8, ICD-9, ICD-9-CM, ICD-10 — editions of the International Classification of Diseases</p>
-            <p>INDT-ASD — INCLEN Diagnostic Tool for Autism Spectrum Disorder Parent report</p>
-            <p><b>Kanner criteria — Leo Kanner’s diagnostic description</b></p>
-            <p>SCDC — Social and Communication Disorders Checklist</p>
-            <p>SCQ — Social Communication Questionnaire</p>
-            <p>SRS — Social Responsiveness Scale</p>
-            <p><b>Rating scale</b></p>
-            <p>RDC — Research Diagnostic Criteria</p>
-            <p>Rutter criteria — Michael Rutter’s diagnostic description</p>
-            <p><b>Study type</b> includes the following options:<br></p>
-            <ul class="mb-2 md:mb-12">
+            <p>When available, the study shows the proportion of participants with at least an  <b>average IQ</b>—the definition of “average” IQ varies from study to study but typically refers to a score above 70 or 80.</p>
+            <p class="mb-0"><b>Diagnostic criteria</b> include the following options:</p>
+            <p class="mb-0">ABC—Autism Behavior Checklist</p>
+            <p class="mb-0">ADOS—Autism Diagnostic Observation Schedule</p>
+            <p class="mb-0">ADI, ADI-R—Autism Diagnostic Interview, Autism Diagnostic Interview-Revised</p>
+            <p class="mb-0">Autistic Disorder</p>
+            <p class="mb-0">CABS—Clancy Autism Behavior Scale</p>
+            <p class="mb-0">CARS—Childhood Autism Rating Scale</p>
+            <p class="mb-0">CCMD-2, CCMD-2-R—Chinese Classification of Mental Disorders, 2<sup>nd</sup> edition</p>
+            <p class="mb-0">Clinician diagnosis</p>
+            <p class="mb-0">DAWBA—Development and Well-Being Assessment</p>
+            <p class="mb-0">DISCO—Diagnostic Interview for Social and Communication Disorderss</p>
+            <p class="mb-0">DSM-III, DSM-III-R, DSM-IV, DSM-IV-TR, DSM-5—editions of the Diagnostic and Statistical Manual of Mental Disorders</p>
+            <p class="mb-0">Gillberg criteria—Christopher Gillberg’s diagnostic description</p>
+            <p class="mb-0">ICD-8, ICD-9, ICD-9-CM, ICD-10—editions of the International Classification of Diseases</p>
+            <p class="mb-0">INDT-ASD—INCLEN Diagnostic Tool for Autism Spectrum Disorder</p>
+            <p class="mb-0">Parent report</p>
+            <p class="mb-0">Kanner criteria—Leo Kanner’s diagnostic description</p>
+            <p class="mb-0">SCDC—Social and Communication Disorders Checklist</p>
+            <p class="mb-0">SCQ—Social Communication Questionnaire</p>
+            <p class="mb-0">SRS—Social Responsiveness Scale</p>
+            <p class="mb-0">Rating scale</p>
+            <p class="mb-0">RDC—Research Diagnostic Criteria</p>
+            <p>Rutter criteria—Michael Rutter’s diagnostic description</p>
+            <p class="mb-0"><b>Study type</b> includes the following options:<br></p>
+            <p class="mb-0">Epidemiological survey—active case-finding with two-stage screen and case confirmation</p>
+            <p class="mb-0">Registry—analysis of already-identified cases in research databases</p>
+            <p class="mb-0">Administrative database—classifications based on existing documented provision of services</p>
+            <p class="mb-0">General health survey—reported symptoms or diagnoses in a population-based survey sample</p>
+            <p>Research cohort—people identified for research projects and followed over time</p>
+            <p class="mb-0"><b>Category</b> includes the following options:<br></p>
+            <p class="mb-0">AD—autistic disorder (now classified as autism spectrum disorder, or ASD, in the DSM-5)</p>
+            <p class="mb-0">PDD—pervasive developmental disorder (now classified as ASD in the DSM-5)</p>
+            <p>ASD—autism spectrum disorder</p>
+            <h2 id="how-to-cite-map" class="mb-4 mt-6 font-sans font-medium uppercase text-1md text-red md:mt-12 md:text-lg">How to cite the Global Autism Prevalence Map:</h2>
+            <p>
+                Please include a statement in your article or on your website that indicates that you retrieved the information from <a href="https://autismprevalence.thetransmitter.org/">https://autismprevalence.thetransmitter.org/</a>. If you refer to the map by name, please call it the “Global Autism Prevalence Map from <i>The Transmitter</i>” and link to this page. For more information on syndication, visit our <a href="https://www.thetransmitter.org/editorial-policies/">editorial policies</a> page.
+            </p>
+            <h2 id="more-info" class="mb-4 mt-8 font-sans font-medium uppercase text-1md text-red md:mt-14 md:text-lg">Read stories on autism prevalence published by <i>The Transmitter</i>:</h2>
+            <ul>
                 <li>
-                    <p><b>Epidemiological survey</b> — active case-finding with two-stage screen and case confirmation</p>
-                </li>
-                <li>
-                    <p><b>Registry</b> — analysis of already-identified cases in research databases</p>
-                </li>
-                <li>
-                    <p><b>Administrative database</b> — classifications based on existing documented provision of services
+                    <p class="mb-2.5">
+                        <a class="font-normal" href="https://www.thetransmitter.org/spectrum/u-s-autism-prevalence-continues-to-rise-as-race-and-sex-gaps-shrink-new-stats-show/">U.S. autism prevalence continues to rise as race and sex gaps shrink, new stats show</a>
                     </p>
                 </li>
                 <li>
-                    <p><b>General health survey</b> — reported symptoms or diagnoses in a population-based survey sample</p>
+                    <p class="mb-5.5">
+                        <a class="font-normal" href="https://www.thetransmitter.org/spectrum/autism-rates-united-states-explained/">Autism by the numbers: Explaining its apparent rise</a>
+                    </p>
                 </li>
                 <li>
-                    <p><b>Research cohort</b> — people identified for research projects and followed over time</p>
+                    <p class="mb-5.5">
+                        <a class="font-normal" href="https://www.thetransmitter.org/spectrum/analysis-offers-first-reliable-estimate-of-prevalence-in-oman/">Analysis offers first reliable estimate of prevalence in Oman</a>
+                    </p>
+                </li>
+                <li>
+                    <p class="mb-5.5">
+                        <a class="font-normal" href="https://www.spectrumnews.org/news/study-quantifies-prevalence-autism-india/">Study quantifies prevalence of autism in India</a>
+                    </p>
+                </li>
+                <li>
+                    <p class="mb-5.5">
+                        <a class="font-normal" href="https://www.spectrumnews.org/news/study-quantifies-prevalence-autism-india/">Autism incidence in England varies by ethnicity, class, location</a>
+                    </p>
                 </li>
             </ul>
-            <p><b>Category</b> includes the following options:<br></p>
-            <p>AD — autistic disorder (now classified as autism spectrum disorder, or ASD, in the DSM-5)</p>
-            <p>PDD — pervasive developmental disorder (now classified as ASD in the DSM-5)</p>
-            <p>ASD — autism spectrum disorder</p>
-            <h2 id="how-to-cite-map" class="mb-4 mt-6 font-sans font-medium uppercase text-1md text-red md:mt-12 md:text-lg">How to cite the Global Autism Prevalence Map:</h2>
-            <p>
-                Please include a statement in your article or on your website that indicates that you retrieved the information from <a href="https://autismprevalence.thetransmitter.org/">https://autismprevalence.thetransmitter.org/</a>. If you refer to it by name, please call it the “Global Autism Prevalence Map from The Transmitter” and link to this page. You can review our editorial policies <a href="https://www.thetransmitter.org/editorial-policies/">here</a>.
-            </p>
-            <h2 id="more-info" class="mb-4 mt-8 font-sans font-medium uppercase text-1md text-red md:mt-14 md:text-lg">Read stories on autism prevalence published by <i>The Transmitter:</i></h2>
-            <p class="mb-2.5">
-                <a class="font-normal" href="https://www.thetransmitter.org/spectrum/u-s-autism-prevalence-continues-to-rise-as-race-and-sex-gaps-shrink-new-stats-show/">U.S. autism prevalence continues to rise as race and sex gaps shrink, new stats show</a>
-            </p>
-            <p class="mb-5.5">
-                <a class="font-normal" href="https://www.thetransmitter.org/spectrum/autism-rates-united-states-explained/">Autism by the numbers: Explaining its apparent rise</a>
-            </p>
-            <p class="mb-5.5">
-                <a class="font-normal" href="https://www.thetransmitter.org/spectrum/analysis-offers-first-reliable-estimate-of-prevalence-in-oman/">Analysis offers first reliable estimate of prevalence in Oman</a>
-            </p>
-            <p class="mb-5.5">
-                <a class="font-normal" href="https://www.spectrumnews.org/news/study-quantifies-prevalence-autism-india/">Study quantifies prevalence of autism in India</a>
-            </p>
-            <p class="mb-5.5">
-                <a class="font-normal" href="https://www.spectrumnews.org/news/study-quantifies-prevalence-autism-india/">Autism incidence in England varies by ethnicity, class, location</a>
-            </p>
             <p><b>Explore more at</b> <a href="https://www.thetransmitter.org/prevalence/">https://www.thetransmitter.org/prevalence/</a></p>
             <h2 id="team" class="mb-4 mt-6 font-sans font-medium text-1md uppercase text-red md:mt-12 md:mb-7.5 md:text-lg">The team behind the global Autism Prevalence Map:</h2>
             <p>The Global Autism Prevalence Map is updated periodically with information collected by Heather MacFarlane, a research data analyst at Oregon Health & Science University.</p>
-            <p>The Global Autism Prevalence Map was first released in 2018 under the leadership of <a href="https://www.thetransmitter.org/contributor/apoorva-mandavilli/">Apoorva Mandavilli</a>, <i>Spectrum’s</i> founding editor-in-chief. <a href="https://www.thetransmitter.org/contributor/nicholette-zeliadt/">Nicholette Zeliadt</a>, <i>The Transmitter’s</i> managing editor, led the map’s build on the editorial side. <a href="https://www.thetransmitter.org/contributor/rebecca-horne/">Rebecca Horne</a>, <i>The Transmitter’s</i> art director, commissioned and oversees the map’s design. Michael Kranz, the Simons Foundation’s former director of web development, oversaw the map’s technical build.</p>
+            <p>The Global Autism Prevalence Map was first released in 2018 under the leadership of <a href="https://www.thetransmitter.org/contributor/apoorva-mandavilli/">Apoorva Mandavilli</a>, <i>Spectrum</i>’s founding editor-in-chief. <a href="https://www.thetransmitter.org/contributor/nicholette-zeliadt/">Nicholette Zeliadt</a>, <i>The Transmitter’s</i> managing editor, led the map’s build on the editorial side. <a href="https://www.thetransmitter.org/contributor/rebecca-horne/">Rebecca Horne</a>, <i>The Transmitter’s</i> art director, commissioned and oversees the map’s design. Michael Kranz, the Simons Foundation’s former director of web development, oversaw the map’s technical build.</p>
             <p>Special project advisers <a href="https://www.thetransmitter.org/contributor/gauri-divan/">Gauri Divan</a>, director of the child development group at Sangath; <a href="https://www.thetransmitter.org/contributor/maureen-durkin/">Maureen Durkin</a>, professor and chair of population health sciences at the University of Wisconsin-Madison; <a href="https://www.thetransmitter.org/contributor/mayada-elsabbagh/">Mayada Elsabbagh</a>, professor of neurology and neurosurgery at McGill University; <a href="https://www.thetransmitter.org/contributor/eric-fombonne/">Eric Fombonne</a>, professor emeritus of psychiatry at Oregon Health & Science University; and <a href="https://www.thetransmitter.org/contributor/catherine-rice/">Catherine Rice</a>, branch chief in the Disability and Health Promotion Branch at the U.S. Centers for Disease Control and Prevention, provided invaluable guidance and expertise throughout the entire project.</p>
-            <h2 id="hear-from-you" class="mb-4 mt-6 font-sans font-medium text-1md uppercase text-red md:mt-12 md:mb-7.5 md:text-lg">We want to hear from you.</h2>
+            <h2 id="hear-from-you" class="mb-4 mt-6 font-sans font-medium text-1md uppercase text-red md:mt-12 md:mb-7.5 md:text-lg">We want to hear from you:</h2>
             <p>If you have questions or feedback about the Global Autism Prevalence Map, email us at <a href="mailto:community@thetransmitter.org">community@thetransmitter.org</a>.</p>
         </article>
     </section>
