--- a/spectrum/autism_prevalence_map/templates/autism_prevalence_map/map.html
+++ b/spectrum/autism_prevalence_map/templates/autism_prevalence_map/map.html
@@ -7,7 +7,7 @@
 {% block body_block %}
 <!-- Main Container
 –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-<div class='relative mx-auto max-w-container'>
+<div class='pt-3 pb-4 relative mx-auto max-w-container'>
     {% include 'autism_prevalence_map/action_buttons.html' with template='map' %}
 
     <!-- Map div
