--- a/spectrum/autism_prevalence_map/templates/autism_prevalence_map/base.html
+++ b/spectrum/autism_prevalence_map/templates/autism_prevalence_map/base.html
@@ -85,7 +85,7 @@
         </div>
     </header>
 
-    <main class="pt-3 pb-4 px-10">
+    <main>
         {% block body_block %} {% endblock %}
         {% include 'autism_prevalence_map/mobile_popup.html' %}
     </main>
