TTWWW-480: Fixes according to ticket comments

--- a/spectrum/autism_prevalence_map/templates/autism_prevalence_map/footer.html
+++ b/spectrum/autism_prevalence_map/templates/autism_prevalence_map/footer.html
@@ -159,7 +159,7 @@
                 </a>
                 <p class="font-serif text-1md tracking-tight-sm md:text-lg md:tracking-normal">Curating neuroscience,
                     connecting community</p>
-                <p>An editorially independent publication supported by the Simons Foundation</p>
+                <p class="tracking-normal-md">An editorially independent publication supported by the Simons Foundation</p>
             </div>
         </div>
     </section>
